@@ -13,6 +13,91 @@
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>November 25, 2004</b>
+</td><td>
+John David Anglin checked in <a
+href="http://gcc.gnu.org/ml/gcc-patches/2004-11/msg02214.html">a patch</a>
+to enable libjava to be built by default on hppa-unknown-linux-gnu.
+</td></tr>
+
+<tr><td valign="top">
+<b>November 22, 2004</b>
+</td><td>
+We're pleased to announce that the GCJ binary compatibility branch has
+been merged to the trunk.  This work includes a new ABI which allows
+precompiled code to follow the binary compatibility rules of the Java
+programming language.
+</td></tr>
+
+<tr><td valign="top">
+<b>September 21, 2004</b>
+</td><td>
+Andreas Tobler imported the new <code>javax.crypto</code>,
+<code>javax.crypto.interfaces</code>, <code>javax.crypto.spec</code>,
+<code>javax.net</code>, <code>javax.net.ssl</code>,
+<code>javax.security.auth</code>, <code>javax.security.auth.callback</code>,
+<code>javax.security.auth.login</code>, <code>javax.security.auth.x500</code>,
+<code>javax.security.sasl</code> and <code>org.ietf.jgss</code>
+packages from the latest
+<a href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.11
+developer snapshot release.  These packages will be an official part of
+then next major release.  Extra crypto algorithms can be obtained
+from the <a href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>
+project, a full TLS implementation is provided by the
+<a href="http://www.nongnu.org/jessie/">Jessie</a> project.
+</td></tr>
+
+<tr><td valign="top">
+<b>July 16, 2004</b>
+</td><td>
+AWT and Swing support continues to improve rapidly. Thomas Fitzsimmons of Red Hat
+added support for the AWT 1.0 event model, still used by many web
+applets. This means that Slime Volleyball now runs on GCJ and gcjwebplugin.
+Here's the 
+<a href="http://people.redhat.com/fitzsim/slime-volleyball-screenshots.html">
+evidence</a>!
+</td></tr>
+
+<tr><td valign="top">
+<b>July 16, 2004</b>
+</td><td>
+GCJ in the press! The July issue of Linux Journal
+features an article on building the Eclipse IDE to native code using GCJ:
+<a href="http://www.linuxjournal.com/article/7413">Eclipse
+goes native</a>. The July issue of Doctor Dobbs Journal also 
+features an article (not available online) on GCJ and the Compiled Native 
+Interface (<a href="http://gcc.gnu.org/onlinedocs/gcj/About-CNI.html">CNI</a>).
+</td></tr>
+
+<tr><td valign="top">
+<b>March 9, 2004</b>
+</td><td>
+Thanks to Wes Biggs and the other GNU Regexp authors, Mark Wielaard
+(for merging into Classpath) and Anthony Green (for merging into
+libgcj), we now have support for <code>java.util.regex</code>.  This
+arrives a little too late for gcc 3.4, but it will appear in the next
+major release.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 22, 2004</b>
+</td><td>
+Graydon Hoare has checked in
+<a href="http://gcc.gnu.org/ml/java-patches/2004-q1/msg00241.html">a
+patch to implement Swing buttons</a>.  This is the first working Swing code,
+a major improvement.  See the <a href="swingshot.png">screen shot</a>.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 9, 2004</b>
+</td><td>
+Andrew Haley has checked in
+<a href="http://gcc.gnu.org/ml/gcc-patches/2004-01/msg00362.html">a
+large reorganization</a> of <code>-findirect-dispatch</code>.  This is
+an important step toward the new binary compatibility ABI.
+</td></tr>
+
+<tr><td valign="top">
 <b>September 3, 2003</b>
 </td><td>
 Jeff Sturm has adapted Jan Hubicka's call graph optimization code to gcj.
