@@ -1,3 +1,9 @@
+2006-05-19  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* index.html: Add a news entry about the import of GNU Classpath 0.91.
+	Move news entries from 2004 into...
+	* news.html: ...this.
+
 2006-05-16  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* index.html: Remove news entry about unreadable Linux Journal
